--- a/resources/style.css
+++ b/resources/style.css
@@ -93,6 +93,10 @@ header nav {
 .column.medium {
   width: 300px;
 }
+
+.cat-ceo.image-content {
+  background-image: url("./images/img-story-1.png");
+}
 /*Third News Column*/
 
 .column.small {
