--- a/resources/style.css
+++ b/resources/style.css
@@ -102,3 +102,30 @@ header nav {
 .column.small {
   width: 240px;
 }
+
+img.cookie {
+  height: 240px;
+}
+
+.news-bites h3 {
+  margin-bottom: 41px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.news-bites .bite {
+  display: block;
+  padding: 11px 20px;
+  border-bottom: 1px solid black;
+  background-color: whitesmoke;
+  font-family: "Verdana", sans-serif;
+  font-size: 12px;
+  color: dimgray;
+}
+
+.bite span {
+  padding-left: 11px;
+}
+
+/*Footer*/
