--- a/resources/style.css
+++ b/resources/style.css
@@ -1,3 +1,5 @@
+/* Universal Styles */
+
 body {
   margin: 0;
   font-family: "Georgia", serif;
@@ -19,6 +21,40 @@ h2 {
 nav span {
   display: inline-block;
   padding: 20px 10px;
+}
+
+/* Universal Styles - News Stories */
+
+.stories {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 17px;
+}
+
+.stories .text-content {
+  height: 250px;
+}
+
+.story {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+
+.narrative {
+  margin-top: 16px;
+}
+
+.image-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 300px;
+  margin-top: 15px;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  text-align: center;
 }
 
 /* Header */
@@ -57,7 +93,9 @@ header {
 header nav {
   padding-right: 40px;
 }
-/*Main Content Container*/
+
+/* Main Content Container */
+
 .content {
   display: flex;
   width: 1232px;
@@ -70,11 +108,12 @@ header nav {
   flex-direction: column;
   margin-right: 32px;
 }
+
+/* First News Column */
+
 .column.large {
   width: 630px;
 }
-
-/*First News Column*/
 
 .lead-story .image-content {
   background-image: url("./images/img-story-main.png");
@@ -88,7 +127,15 @@ header nav {
   margin-left: 20px;
 }
 
-/*Second News Column*/
+.fall-cancelled.image-content {
+  background-image: url("./images/img-story-2.png");
+}
+
+.pop-culture.image-content {
+  background-image: url("./images/img-story-3.png");
+}
+
+/* Second News Column */
 
 .column.medium {
   width: 300px;
@@ -97,7 +144,8 @@ header nav {
 .cat-ceo.image-content {
   background-image: url("./images/img-story-1.png");
 }
-/*Third News Column*/
+
+/* Third News Column */
 
 .column.small {
   width: 240px;
@@ -128,4 +176,32 @@ img.cookie {
   padding-left: 11px;
 }
 
-/*Footer*/
+/* Footer */
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 325px;
+  background-color: mediumaquamarine;
+  margin: auto;
+  font-family: "Verdana", sans-serif;
+  font-size: 12px;
+}
+
+footer .title {
+  display: inline-block;
+  padding-right: 25px;
+  border-right: 2px solid white;
+  font-family: "Georgia", serif;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+}
+
+footer nav {
+  display: inline-block;
+  padding-left: 25px;
+}
